# usdOpenAssetIOResolver

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  conanfile.py
.github/build_openassetio/: action.yml
.github/build_openassetio_mediacreation/: action.yml
.github/workflows/: code-quality.yml  test.yml
cmake/: CompilerWarnings.cmake  DefaultTargetProperties.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  resolver.cpp  resolver.h
src/resources/: plugInfo.json
tests/: openassetio.conf  requirements.txt  test_resolver.py
tests/resources/: empty_shot.usda  openassetio_config.toml  openassetio_config_cpp.toml  openassetio_config_cpp.toml.incapable  openassetio_config_python.toml  openassetio_config_python.toml.incapable
tests/resources/integration_test_data/: bal_library.json  bal_library_incapable.json
tests/resources/integration_test_data/assetized_child_ref_non_assetized_grandchild/: bal_library.json  floor1.usd  parking_lot.usd
tests/resources/integration_test_data/error_triggering_asset_ref/: parking_lot.usd
tests/resources/integration_test_data/non_assetized_child_ref_assetized_grandchild/: bal_library.json  floor1.usd
tests/resources/integration_test_data/recursive_assetized_resolve/: bal_library.json  parking_lot.usd
tests/resources/integration_test_data/recursive_assetized_resolve/floors/: floor @ 1.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_no_search_path/: parking_lot.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_search_path/: parking_lot.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_search_path/search_path_root/cars/: car.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_search_path/search_path_root/floors/: floor1.usd
